--- a/API/API.csproj
+++ b/API/API.csproj
@@ -13,7 +13,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Database\Database.csproj" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Utility\" />
     </ItemGroup>
 
 </Project>
