Create database connection string.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnection": "Host=localhost; Database=techair; Username=postgres; Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
