Fixed DB connection string.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Host=localhost; Database=techair; Username=postgres; Password=postgres"
+    "DatabaseConnection": "Host=localhost;Database=techair;Username=postgres;Password=toor"
   },
   "Logging": {
     "LogLevel": {
