Add DB connection string to settings.

--- a/API/config.example.json
+++ b/API/config.example.json
@@ -1,3 +1,4 @@
 {
-    "CachePath": "WAL.json"
+    "DatabaseConnection": "Host=1.0.0.2;Database=techair;Username=root;Password=toor",
+    "Secret": "toor"
 }
