Update connection name.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Host=1.0.0.2;Database=techair;Username=root;Password=toor"
+    "DefaultConnection": "Host=1.0.0.2;Database=techair;Username=root;Password=toor"
   },
   "Logging": {
     "LogLevel": {
